--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "infra:reset": "npm run infra:clean && npm run infra:up",
     "// [4] BUILD E VERIFICAÇÃO": "-------------------------------------------------------",
     "build:all": "npm run build --workspaces --if-present",
-    "backend:build": "npm run build -w @elo-organico/backend",
-    "frontend:build": "npm run build -w @elo-organico/frontend",
-    "shared:build": "npm run build -w @elo-organico/shared",
+    "build:backend": "npm run build -w @elo-organico/backend",
+    "build:frontend": "npm run build -w @elo-organico/frontend",
+    "build:shared": "npm run build -w @elo-organico/shared",
     "clean": "npm run clean --workspaces --if-present",
     "lint:all": "npm run lint --workspaces --if-present",
     "typecheck:all": "npm run typecheck --workspaces --if-present",
