--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -1,6 +1,8 @@
 {
   "name": "@elo-organico/backend",
   "version": "0.1.0",
+  "type": "module",
+  "private": true,
   "author": "Tupynambá Lucas Varela Rodrigues <tupynambalucas.dev>",
   "license": "CC-BY-NC-4.0",
   "homepage": "https://github.com/tupynambalucas/EloOrganico/tree/main/packages/backend#readme",
@@ -9,11 +11,10 @@
     "url": "git+https://github.com/tupynambalucas/EloOrganico.git",
     "directory": "packages/backend"
   },
-  "private": true,
   "main": "dist/index.js",
   "scripts": {
-    "clean": "rimraf dist",
-    "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/index.ts",
+    "clean": "rimraf dist tsconfig.tsbuildinfo",
+    "dev": "tsx watch src/index.ts",
     "build": "npm run clean && tsc -p tsconfig.build.json",
     "seed": "tsx src/scripts/seedAdmin.ts",
     "seed:prod": "node dist/scripts/seedAdmin.js",
@@ -44,13 +45,12 @@
     "mongoose": "^8.19.4",
     "pino-roll": "^4.0.0",
     "sdk-node-apis-efi": "^1.2.25",
-    "tsconfig-paths": "^4.2.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/ioredis": "^4.28.10",
     "@types/node": "^20.12.12",
-    "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
     "tsx": "^4.21.0",
     "typescript": "~5.8.3"
   }
