--- a/packages/backend/tsconfig.build.json
+++ b/packages/backend/tsconfig.build.json
@@ -5,5 +5,14 @@
     "baseUrl": ".",
     "paths": {}
   },
-  "exclude": ["node_modules", "test", "**/*.spec.ts"]
+  "references": [
+    {
+      "path": "../shared"
+    }
+  ],
+  "exclude": [
+    "node_modules",
+    "test",
+    "**/*.spec.ts"
+  ]
 }
