--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,36 +1,30 @@
 {
   "name": "@elo-organico/shared",
   "version": "0.1.0",
-  "author": "Tupynambá Lucas Varela Rodrigues <tupynambalucas.dev>",
-  "license": "CC-BY-NC-4.0",
-  "homepage": "https://github.com/tupynambalucas/EloOrganico/tree/main/packages/shared#readme",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/tupynambalucas/EloOrganico.git",
-    "directory": "packages/shared"
-  },
   "private": true,
+  "type": "module",
   "main": "./dist/index.js",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
-      "require": "./dist/index.js"
+      "default": "./dist/index.js"
     }
   },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "clean": "rimraf dist tsconfig.tsbuildinfo",
     "build": "npm run clean && tsc -b",
-    "dev": "npm run clean && tsc -w",
+    "dev": "npm run clean && tsc -b -w",
     "typecheck": "tsc --noEmit",
     "lint": "eslint ."
   },
   "dependencies": {
+    "@types/node": "^20.12.12",
     "zod": "^3.24.1"
   }
 }
