--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "globals": "^16.3.0",
     "prettier": "^3.7.4",
     "rimraf": "^6.0.1",
-    "typescript": "~5.7.2",
+    "typescript": "^5.6.3",
     "typescript-eslint": "^8.39.1"
   }
 }
