--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -49,9 +49,7 @@
   },
   "devDependencies": {
     "@types/ioredis": "^4.28.10",
-    "@types/node": "^20.12.12",
     "tsconfig-paths": "^4.2.0",
-    "tsx": "^4.21.0",
-    "typescript": "~5.8.3"
+    "tsx": "^4.21.0"
   }
 }
