--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -42,7 +42,9 @@
     "@types/react-dom": "^19.0.0-rc.0",
     "@vitejs/plugin-react-swc": "^4.0.0",
     "tailwindcss": "^4.1.18",
-    "typescript": "~5.8.3",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.14",
     "typescript-plugin-css-modules": "^5.2.0",
     "vite": "^7.1.2",
     "vite-plugin-svgr": "^4.3.0",
