--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -37,7 +37,12 @@
       }
     ]
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.d.ts"],
+  "include": [
+    "src/**/*",
+    "src/**/*.css",
+    "src/**/*.module.css",
+    "src/types/**/*.d.ts"
+  ],
   "exclude": ["node_modules"],
   "references": [{ "path": "./tsconfig.node.json" }, { "path": "../shared" }]
 }
