--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "files": [],
   "references": [
+    { "path": "./tsconfig.node.json" },
     { "path": "./packages/shared" },
     { "path": "./packages/backend" },
     { "path": "./packages/frontend" }
