--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@elo-organico/monorepo",
   "version": "0.1.0",
-  "type": "module",
   "private": true,
+  "type": "module",
   "packageManager": "npm@11.6.2",
   "author": "Tupynambá Lucas Varela Rodrigues <tupynambalucas.dev>",
   "license": "CC-BY-NC-4.0",
@@ -43,17 +43,13 @@
     "prod:down": "docker compose -f docker-compose.yml -f docker-compose.prod.yml down"
   },
   "devDependencies": {
-    "@eslint/js": "^9.33.0",
-    "@types/node": "^20.12.12", 
+    "@types/node": "^20.12.12",
     "concurrently": "^8.2.2",
-    "eslint": "^9.33.0",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.32.0",
-    "globals": "^16.3.0",
     "prettier": "^3.7.4",
     "rimraf": "^6.0.1",
-    "typescript": "^5.6.3",
-    "typescript-eslint": "^8.39.1"
+    "turbo": "^2.2.3",
+    "typescript": "5.9.3",
+    "typescript-eslint": "^8.50.1"
   }
 }
