--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -8,9 +8,18 @@
     "strict": true,
     "noEmit": true,
     "allowJs": true,
-    "checkJs": true 
+    "checkJs": true,
+    "target": "ES2022",
+    "lib": ["ES2022"]
   },
   "include": [
-    "eslint.config.js"
+    "eslint.config.js",
+    "*.config.{js,mjs,ts}",
+    "scripts/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "packages"
   ]
 }
