--- a/package.json
+++ b/package.json
@@ -49,11 +49,16 @@
     "@types/node": "^20.12.12",
     "concurrently": "^8.2.2",
     "eslint": "^9.39.2",
-    "eslint-plugin-import": "^2.32.0",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.14",
     "prettier": "^3.7.4",
     "rimraf": "^6.0.1",
     "turbo": "^2.2.3",
     "typescript": "5.9.3",
-    "typescript-eslint": "^8.50.1"
+    "typescript-eslint": "^8.50.1",
+    "typescript-plugin-css-modules": "^5.2.0"
   }
 }
