--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -15,7 +15,8 @@
     "dev": "vite",
     "build": "tsc -p tsconfig.build.json && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@elo-organico/shared": "*",
@@ -42,10 +43,6 @@
     "@types/react-dom": "^19.0.0-rc.0",
     "@vitejs/plugin-react-swc": "^4.0.0",
     "tailwindcss": "^4.1.18",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.14",
-    "typescript-plugin-css-modules": "^5.2.0",
     "vite": "^7.1.2",
     "vite-plugin-svgr": "^4.3.0",
     "vite-tsconfig-paths": "^5.1.4"
