--- a/package.json
+++ b/package.json
@@ -58,7 +58,6 @@
     "rimraf": "^6.0.1",
     "turbo": "^2.2.3",
     "typescript": "5.9.3",
-    "typescript-eslint": "^8.50.1",
-    "typescript-plugin-css-modules": "^5.2.0"
+    "typescript-eslint": "^8.50.1"
   }
 }
