--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
+    "@typescript-eslint/eslint-plugin": "^8.50.1",
     "concurrently": "^8.2.2",
     "eslint": "^9.39.2",
     "eslint-import-resolver-typescript": "^4.4.4",
