--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "packages/*"
   ],
   "scripts": {
+    "gemini": "start cmd /k npx gemini",
+    "gemini:chat": "start cmd /k npx gemini chat",
+    "gemini:review": "start cmd /k npx gemini review .",
+    "gemini:doc": "start cmd /k npx gemini doc --styleguide ./.gemini/styleguide.md",
     "// [1] INSTALAÇÃO E SETUP": "-------------------------------------------------------",
     "postinstall": "npm run build -w @elo-organico/shared",
     "// [2] DESENVOLVIMENTO LOCAL": "----------------------------------------------------",
@@ -46,6 +50,7 @@
     "prod:down": "docker compose -f docker-compose.yml -f docker-compose.prod.yml down"
   },
   "devDependencies": {
+    "@google/gemini-cli": "^0.22.4",
     "@types/node": "^20.12.12",
     "@typescript-eslint/eslint-plugin": "^8.50.1",
     "concurrently": "^8.2.2",
@@ -55,6 +60,7 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
+    "npm": "^11.7.0",
     "prettier": "^3.7.4",
     "rimraf": "^6.0.1",
     "turbo": "^2.2.3",
