--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     { "path": "./tsconfig.node.json" },
     { "path": "./packages/shared" },
     { "path": "./packages/backend" },
-    { "path": "./packages/frontend/tsconfig.build.json" }
+    { "path": "./packages/frontend/tsconfig.build.json" },
+    { "path": "./packages/frontend/tsconfig.node.json" }
   ],
   "compilerOptions": {
     "baseUrl": ".",
